fix: FSxL-S3 DRA path

--- a/infrastructure/cloudformation/batch-protein-folding-cfn-fsx-lustre.yaml
+++ b/infrastructure/cloudformation/batch-protein-folding-cfn-fsx-lustre.yaml
@@ -75,7 +75,7 @@ Resources:
       BatchImportMetaDataOnCreate: True
       DataRepositoryPath: !Sub s3://${S3BucketName}/fsx/
       FileSystemId: !Ref FSX
-      FileSystemPath: /fsx
+      FileSystemPath: /
       S3: 
         AutoExportPolicy: 
           Events:
